--- a/Jisshu/template/jisshu.html
+++ b/Jisshu/template/jisshu.html
@@ -24,23 +24,23 @@
           
                 <div class="image-container"></div>
                 <div class="p-3">
-                    <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft" id="offcanvasWithBothOptionsLabel"<h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft" id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;">Zishan Khan</h4></h4>
+                    <h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft" id="offcanvasWithBothOptionsLabel"<h4 class="offcanvas-title font-semibold wow animate__animated animate__fadeInLeft" id="offcanvasWithBothOptionsLabel" style="text-shadow: 3px 5px 11px black;"> </h4></h4>
                     <p class="text-danger">The One & Only</p>
                 </div>
             </div>
             <div class="main-text">Telegram channels:</div>
             <div class="d-grid gap-2">
-                <a href="https://t.me/JISSHU_BOTS" class="redeem-buttons">
-                    JISSHU BOTS
+                <a href="https://t.me/isha_tube_bot" class="redeem-buttons">
+                    𝙸𝚂𝙷𝙰 𝙱𝙾𝚃𝚂
                 </a>
-                <a href="https://t.me/Jisshu_support" class="redeem-buttons">
-                    SUPPORT GROUP
+                <a href="https://t.me/isha_support" class="redeem-buttons">
+                    𝙸𝚂𝙷𝙰 𝚂𝚄𝙿𝙿𝙾𝚁𝚃
                 </a>
-                <a href="https://t.me/Jisshu_Originals" class="redeem-buttons">
-                  BACKUP CHANNEL  
+                <a href="https://t.me/sakshi_fanbase" class="redeem-buttons">
+                  𝙱𝙰𝙲𝙺𝚄𝙿 𝙲𝙷𝙰𝙽𝙽𝙴𝙻
                 </a>
-                <a href="https://t.me/JisshuDeveloperBot" class="redeem-buttons">
-                  CONTACT
+                <a href="https://t.me/isha_movies" class="redeem-buttons">
+                 𝙼𝙾𝚅𝙸𝙴𝚂 𝙶𝚁𝙾𝚄𝙿 
                 </a>
             </div>
         </div>
@@ -194,7 +194,7 @@
         });
     </script>
    <div style="text-align: center; margin-top: 20px;">
-    <p style="font-size: 18px;">Mode With <span class="moving-heart">🩵</span> <a href="https://t.me/IM_JISSHU" style="color: #FFA500; text-decoration: none;">Zishan khan</a></p>
+    <p style="font-size: 18px;">Mode With <span class="moving-heart">🩵</span> <a href="https://t.me/isha_dalvi_x" style="color: #FFA500; text-decoration: none;">isha dalvi</a></p>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
