--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -19,7 +19,7 @@
     <nav>
         <div class="nleft">
             <a href="#">
-                <h3 id="heading" style="z-index: 100;" class="magnet title">FILE STREAM</h3>
+                <h3 id="heading" style="z-index: 100;" class="magnet title">🅘🅢🅗🅐 🅜🅞🅥🅘🅔🅢</h3>
             </a>
         </div>
         <div class="nryt">
@@ -43,7 +43,7 @@
                 <div class="player"></div>
                 <div class="file-name">
                     <h4 style="display: inline;">File Name: </h4>
-                    <p style="display: inline;" id="myDiv">{{file_name}}</p><br>
+                    <p style="display: inline;" id="myDiv">@isha_movies {{file_name}}</p><br>
                     <h4 style="display: inline;">File Size: </h4>
                     <p style="display: inline;">{{file_size}}</p>
                 </div>
@@ -71,12 +71,12 @@
                     <div class="about-dets">
 
                         <div class="abt-sec" id="abtus" style="padding: 160px 30px;">
-                            <h1 style="text-align: center;">WELCOME TO OUR <Span>FILE STREAM</Span> BOT</h1>
+                            <h1 style="text-align: center;">WELCOME TO OUR <Span>🅘🅢🅗🅐 🅜🅞🅥🅘🅔🅢</Span> BOT</h1>
                             <p style="text-align: center; line-height: 2;word-spacing: 2px;  letter-spacing: 0.8px;">
                                 This is a Telegram Bot to Stream <span>Movies</span> and <span>Series</span> directly on
                                 Telegram. You can also
                                 <span>download</span> them if you want. This bot is developed by <a
-                                    href="https://telegram.dog/IM_JISSHU"><span style="font-weight: 700;">ZISHAN</span></a>
+                                    href="https://telegram.dog/isha_dalvi_x"><span style="font-weight: 700;">𝙸𝚜𝚑𝚊 𝚍𝚊𝚕𝚟𝚒</span></a>
                                 <br><br>If you like this bot, then don't
                                 forget to share it with your friends and family.
                             </p>
@@ -85,14 +85,14 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/JISSHU_BOTS">
-                                    <button>BOTS CHANNEL</button>
+                                <a class="magnet" href="https://t.me/isha_dalvi_x">
+                                    <button>𝙰𝚍𝚖𝚒𝚗 𝙲𝚘𝚗𝚝𝚊𝚌𝚝</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_support">
-                                    <button>SUPPORT GROUP</button>
+                                <a class="magnet" href="https://t.me/isha_support">
+                                    <button>𝚂𝚞𝚙𝚙𝚘𝚛𝚝 𝙶𝚛𝚘𝚞𝚙</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_Originals">
-                                    <button>MOVIES CHANNEL</button
+                                <a class="magnet" href="https://t.me/isha_movies">
+                                    <button>𝙸𝚜𝚑𝚊 𝙼𝚘𝚟𝚒𝚎𝚜</button
                                 </a>
                                 <!---<a class="magnet" href="https://t.me/EpitomeQuality">
                                     <button>EPITOME QUALITY</button>
@@ -103,7 +103,7 @@
                         <div class="abt-sec" id="contact">
                             <p style="text-align: center;">Report Bugs and Contact us on Telegram Below</p>
                             <div class="links contact">
-                                <a href="https://t.me/JisshuDeveloperBot">
+                                <a href="https://t.me/isha_dalvi_x">
                                     <button>CONTACT</button>
                                 </a>
                             </div>
@@ -116,8 +116,8 @@
         <footer>
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/IM_JISSHU"><span
-                                style="font-weight: 700;">JISSHU DEVELOPER</span></a>. All
+                    <h5 class="text-center">Copyright © 2024 <a href="https://t.me/isha_dalvi_x"><span
+                                style="font-weight: 700;">𝙸𝚜𝚑𝚊 𝙳𝚊𝚕𝚟𝚒</span></a>. All
                         Rights Reserved.</h5>
                 </div>
             </center>
